--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_SERVER_URI=mongodb+srv://cluster0.vfh7a.mongodb.net/agenda
-MONGO_USERNAME=agenda
-MONGO_PASSWORD=MS28FbxhWBvXUrz
+MONGO_SERVER_URI=mongodb+srv://cluster0.vfh7a.mongodb.net/agenda?authSource=admin
+MONGO_USERNAME=user_2
+MONGO_PASSWORD=Xp13sg13
