--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGO_SERVER_URI=mongodb+srv://cluster0.vfh7a.mongodb.net/agenda?authSource=admin
-MONGO_USERNAME=user_2
-MONGO_PASSWORD=Xp13sg13
+MONGO_USERNAME=user
+MONGO_PASSWORD=12345612
